--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "template",
+  "name": "node-rest-api",
+  "homepage": "https://bolotinalexey.github.io/nodejs-hw-rest-api/",
   "version": "0.0.0",
   "private": true,
   "scripts": {
@@ -24,5 +25,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "nodemon": "2.0.15"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://bolotinalexey.github.io/nodejs-hw-rest-api.git"
   }
 }
