--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "node-rest-api",
-  "homepage": "https://bolotinalexey.github.io/nodejs-rest-api-contacts.git/",
+  "homepage": "https://bolotinalexey.github.io/nodejs-hw-rest-api/",
   "version": "0.0.0",
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=production node ./server.js",
@@ -12,8 +15,10 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.1.4",
     "express": "4.17.1",
     "joi": "^17.9.2",
+    "mongoose": "^7.2.2",
     "morgan": "1.10.0",
     "nanoid": "^3.3.4"
   },
@@ -29,6 +34,6 @@
   "author": "Oleksii Bolotin",
   "repository": {
     "type": "git",
-    "url": "git+https://bolotinalexey.github.io/nodejs-rest-api-contacts.git"
+    "url": "git+https://bolotinalexey.github.io/nodejs-hw-rest-api.git"
   }
 }
