--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-rest-api",
-  "homepage": "https://bolotinalexey.github.io/nodejs-hw-rest-api/",
+  "homepage": "https://bolotinalexey.github.io/nodejs-rest-api-contacts.git/",
   "version": "0.0.0",
   "engines": {
     "node": ">=16.0.0"
@@ -34,6 +34,6 @@
   "author": "Oleksii Bolotin",
   "repository": {
     "type": "git",
-    "url": "git+https://bolotinalexey.github.io/nodejs-hw-rest-api.git"
+    "url": "git+https://bolotinalexey.github.io/nodejs-rest-api-contacts.git"
   }
 }
